--- a/include/i18n/en_US/help_topic.yaml
+++ b/include/i18n/en_US/help_topic.yaml
@@ -23,7 +23,7 @@
   dept_id: 1
   sla_id: 1
   priority_id: 2
-  formset_id: 1
+  form_id: 1
   topic: Support
   notes: |
     Tickets that primarily concern the support deparment
@@ -33,7 +33,7 @@
   dept_id: 1
   sla_id: 0
   priority_id: 2
-  formset_id: 1
+  form_id: 1
   topic: Billing
   notes: |
     Tickets that primarily concern the sales and billing deparments
