Fixup the installer
Fixup several minor bugs concerning initial experience

--- a/include/i18n/en_US/form.yaml
+++ b/include/i18n/en_US/form.yaml
@@ -79,5 +79,6 @@
       name: priority # notrans
       label: Priority Level
       required: false
+      private: true
       edit_mask: 3
       sort: 3
