--- a/include/i18n/en_US/templates/premade.yaml
+++ b/include/i18n/en_US/templates/premade.yaml
@@ -17,7 +17,7 @@
 
 - title: Sample (with variables)
   response: |
-    %{ticket.name},
+    Hi %{ticket.name.first},
 
     Your ticket #%{ticket.number} created on %{ticket.create_date} is in
     %{ticket.dept.name} department.
