Changes made after feature review

--- a/include/i18n/en_US/email_template_group.yaml
+++ b/include/i18n/en_US/email_template_group.yaml
@@ -14,6 +14,6 @@
 #
 ---
 - isactive: 1
-  name: osTicket Default Template
+  name: osTicket Default Template (HTML)
   notes: |
     Default osTicket templates
