--- a/include/i18n/en_US/templates/email/ticket.notice.yaml
+++ b/include/i18n/en_US/templates/email/ticket.notice.yaml
@@ -19,7 +19,7 @@ body: |
         <td style="vertical-align: middle; border-bottom: 1px solid #ddd;
         height: 48pt">
             <span style="color: rgb(127, 127, 127); font-family: Georgia;
-            font-size: 28pt; font-weight: normal;">We Hear You</span>
+            font-size: 28pt; font-weight: normal;">We're Here For You</span>
         </td>
         <td style="border-bottom: 1px solid #ddd;">
             <img src="cid:6fe1efdea357534d238b86e7860a7c5a" width="94"
