Revise initial email templates
Ticket notice and ticket auto-reply should not be formatted inside a table
since the %{message} or %{response} should be allowed to flow freely in the
email rather than be crammed inside the table.

--- a/include/i18n/en_US/templates/email/assigned.alert.yaml
+++ b/include/i18n/en_US/templates/email/assigned.alert.yaml
@@ -13,7 +13,7 @@ notes: |
     member.  Use %{assigner} to distinguish who made the assignment.
 
 subject: |
-    Ticket #%{ticket.number} Assigned to you
+    Ticket Assigned to you
 body: |
     <h3><strong>Hi %{assignee},</strong></h3>
     <p>
