--- a/include/i18n/en_US/templates/email/ticket.autoresp.yaml
+++ b/include/i18n/en_US/templates/email/ticket.autoresp.yaml
@@ -8,7 +8,7 @@ notes: |
     Sent to a user when a new ticket is created
 
 subject: |
-    Support Ticket Opened [#%{ticket.number}]
+    Support Ticket Opened
 body: |
     <table cellspacing="0">
     <tbody>
