--- a/include/i18n/en_US/form.yaml
+++ b/include/i18n/en_US/form.yaml
@@ -28,28 +28,50 @@
 ---
 - id: 1
   type: U # notrans
-  title: Client Details
+  title: Contact Information
   deletable: false
   fields:
+    - type: text # notrans
+      name: email # notrans
+      label: Email Address
+      required: true
+      sort: 1
+      edit_mask: 15
+      configuration:
+        size: 40
+        length: 64
+        validator: email # notrans
+
+    - type: text # notrans
+      name: name # notrans
+      label: Full Name
+      required: true
+      sort: 2
+      edit_mask: 15
+      configuration:
+        size: 40
+        length: 64
+
     - type: phone # notrans
       name: phone # notrans
       label: Phone Number
       required: false
-      sort: 1
+      sort: 3
 
     - type: memo # notrans
       name: notes
       label: Internal Notes
       required: false
       private: true
-      sort: 2
+      sort: 4
       configuration:
         rows: 4
         cols: 40
 
 - id: 2
   type: T # notrans
-  title: Standard Ticket Form
+  title: Ticket Details
+  instructions: Please Describe Your Issue
   notes: |
       This form will be attached to every ticket, regardless of its source.
       You can add any fields to this form and they will be available to all
@@ -58,8 +80,7 @@
   fields:
     - type: text # notrans
       name: subject # notrans
-      label: Subject
-      hint: Issue Summary
+      label: Issue Summary
       required: true
       edit_mask: 15
       sort: 1
@@ -69,7 +90,7 @@
 
     - type: thread # notrans
       name: message # notrans
-      label: Issue
+      label: Issue Details
       hint: Details on the reason(s) for opening the ticket.
       required: true
       edit_mask: 15
