--- a/include/i18n/en_US/templates/email/ticket.overdue.yaml
+++ b/include/i18n/en_US/templates/email/ticket.overdue.yaml
@@ -42,6 +42,6 @@ body: |
         to a team or department of which you're a member.</span>
     </p>
     <p>
-        <img src="cid:b56944cb4722cc5cda9d1e23a3ea7fbc"
-        alt="Powered by osTicket" width="146" height="0" style="width: 146px;">
+        <img src="cid:b56944cb4722cc5cda9d1e23a3ea7fbc" height="19"
+            alt="Powered by osTicket" width="126" style="width: 146px;">
     </p>
