--- a/include/i18n/en_US/templates/email/transfer.alert.yaml
+++ b/include/i18n/en_US/templates/email/transfer.alert.yaml
@@ -28,6 +28,7 @@ body: |
     <p>
         <em>Your friendly Customer Support System
         <br/>
-        <a href="http://osticket.com/"><img width="126" height="23"
-            alt="Powered By osTicket" src="cid:b56944cb4722cc5cda9d1e23a3ea7fbc"/></a>
+        <a href="http://osticket.com/"><img width="126" height="19"
+            alt="Powered By osTicket" style="width: 126px;"
+            src="cid:b56944cb4722cc5cda9d1e23a3ea7fbc"/></a>
     </p>
