--- a/include/i18n/en_US/group.yaml
+++ b/include/i18n/en_US/group.yaml
@@ -28,11 +28,15 @@
 # depts: (list<Department<id>>) id's of the departments to which the group
 #       should initially have access
 #
+# NOTE: ------------------------------------
+# The very first group listed in this document will be the primary group of
+# the initial staff member -- the administrator.
 ---
 - isactive: 1
-  name: Admins
+  name: Overseers
   notes: |
-    System overlords
+    System overlords. These folks (initially) have full control to all the
+    departments they have access to.
   can_create_tickets: 1
   can_edit_tickets: 1
   can_delete_tickets: 1
