--- a/include/i18n/en_US/templates/email/ticket.overdue.yaml
+++ b/include/i18n/en_US/templates/email/ticket.overdue.yaml
@@ -15,32 +15,24 @@ subject: |
     Stale Ticket Alert
 body: |
     <h3><strong>Hi %{recipient}</strong>,</h3>
-    <p>
-        A ticket, <a href="%{ticket.staff_link}">#%{ticket.number}</a> is
-        seriously overdue.
-    </p>
-    <p>
-        We should all work hard to guarantee that all tickets are being
-        addressed in a timely manner.
-    </p>
-    <p>
-        Signed, %{ticket.dept.manager.name}
-    </p>
-    <p>
-        <em>Your friendly
-        <span style="font-size: small">(although with limited patience)</span><br>
-        </em><em>Support Ticket System</em>
-    </p>
+    A ticket, <a href="%{ticket.staff_link}">#%{ticket.number}</a> is
+    seriously overdue.
+    <br>
+    <br>
+    We should all work hard to guarantee that all tickets are being
+    addressed in a timely manner.
+    <br>
+    <br>
+    Signed,<br>
+    %{ticket.dept.manager.name}
     <hr>
-    <p>
-        <span style="color: rgb(127, 127, 127); font-size: small;">To
-        view/respond to the ticket, please <a
-        href="%{ticket.staff_link}"><span style="color: rgb(84, 141, 212);"
-        >login</span></a> to the support ticket system. You're receiving
-        this notice because the ticket is assigned to you either directly or
-        to a team or department of which you're a member.</span>
-    </p>
-    <p>
-        <img src="cid:b56944cb4722cc5cda9d1e23a3ea7fbc" height="19"
-            alt="Powered by osTicket" width="126" style="width: 126px;">
-    </p>
+    <div>To view or respond to the ticket, please <a
+    href="%{ticket.staff_link}"><span style="color: rgb(84, 141, 212);"
+    >login</span></a> to the support ticket system. You're receiving this
+    notice because the ticket is assigned directly to you or to a team or
+    department of which you're a member.</div>
+    <em style="font-size: small">Your friendly <span style="font-size: smaller"
+    >(although with limited patience)</span> Customer Support
+    System</em><br>
+    <img src="cid:b56944cb4722cc5cda9d1e23a3ea7fbc" height="19"
+        alt="Powered by osTicket" width="126" style="width: 126px;">
