--- a/include/i18n/en_US/templates/email/message.autoresp.yaml
+++ b/include/i18n/en_US/templates/email/message.autoresp.yaml
@@ -14,21 +14,19 @@ notes: |
 subject: |
     Message Confirmation
 body: |
-    <h3><strong>Dear %{ticket.name},</strong></h3>
-    <p>
-        Your reply to support request <a
-        href="%{ticket.client_link}">#%{ticket.number}</a> has been noted
-    </p>
-    <p>
-        %{signature}
-    </p>
+    <h3><strong>Dear %{ticket.name.first},</strong></h3>
+    Your reply to support request <a
+    href="%{ticket.client_link}">#%{ticket.number}</a> has been noted
+    <br>
+    <br>
+    <div style="color: rgb(127, 127, 127); ">
+    Your Company Name Team,<br>
+    %{signature}
+    </div>
     <hr>
-    <p>
-        <span style="color: rgb(127, 127, 127); font-size: small">You can
-        view this support request's progress <a
-        href="%{ticket.client_link}">online here</a></span>
-    </p>
-    <p>
-        <img src="cid:b56944cb4722cc5cda9d1e23a3ea7fbc"
-        alt="Powered by osTicket" width="126" height="19" style="width: 126px;">
-    </p>
+    <div style="color: rgb(127, 127, 127); font-size: small; text-align:
+    center"><em>You can view the support request progress <a
+    href="%{ticket.client_link}">online here</a></em><br>
+    <a href="http://osticket.com/"><img
+    src="cid:b56944cb4722cc5cda9d1e23a3ea7fbc" alt="Powered by osTicket"
+    width="126" height="19" style="width: 126px;"></a></div>
