--- a/include/i18n/en_US/templates/email/staff.pwreset.yaml
+++ b/include/i18n/en_US/templates/email/staff.pwreset.yaml
@@ -12,25 +12,25 @@ notes: |
 subject: |
     osTicket Staff Password Reset
 body: |
-    <h3><strong>Hi %{staff.name},</strong></h3>
-    <p>
-        You or perhaps somebody you know has submitted a password reset
-        request on your behalf for the helpdesk at %{url}.
-    </p>
-    <p>
-        If you feel that this has been done in error. Delete and disregard
-        this email. Your account is still secure and no one has been given
-        access to it. It is not locked and your password has not been
-        reset. Someone could have mistakenly entered your email address.
-    </p>
-    <p>
-        Follow the link below to login to the help desk and change your
-        password.
-    </p>
-    <p>
-        %{reset_link}
-    </p>
-    <p style="text-align: center;">
-        <img src="cid:b56944cb4722cc5cda9d1e23a3ea7fbc" alt="Powered by osTicket"
-        width="126" height="19" style="width: 126px;">
-    </p>
+    <h3><strong>Hi %{staff.name.first},</strong></h3>
+    A password reset request has been submitted on your behalf for the
+    helpdesk at %{url}.
+    <br>
+    <br>
+    If you feel that this has been done in error, delete and disregard this
+    email. Your account is still secure and no one has been given access to
+    it. It is not locked and your password has not been reset. Someone could
+    have mistakenly entered your email address.
+    <br>
+    <br>
+    Follow the link below to login to the help desk and change your
+    password.
+    <br>
+    <br>
+    <a href="%{reset_link}">%{reset_link}</a>
+    <br>
+    <br>
+    <em style="font-size: small">Your friendly Customer Support System</em>
+    <br>
+    <img src="cid:b56944cb4722cc5cda9d1e23a3ea7fbc" alt="Powered by osTicket"
+    width="126" height="19" style="width: 126px;">
