--- a/include/i18n/en_US/templates/email/ticket.autoresp.yaml
+++ b/include/i18n/en_US/templates/email/ticket.autoresp.yaml
@@ -25,54 +25,49 @@ body: |
     </tr>
     <tr>
         <td style="width:67%; padding-top: 12pt; padding-right: 12pt">
-        <p>
-            Dear %{ticket.name},
-        </p>
-        <p>
+            Dear %{ticket.name.first},
+            <br>
+            <br>
             We received your request and assigned ticket #%{ticket.number}
-        </p>
-        <p>
+            <br>
+            <br>
             Topic: <strong>%{ticket.topic.name}</strong>
-        </p>
-        <p>
+            <br>
             Subject: <strong>%{ticket.subject}</strong>
-        </p>
-        <p>
+            <br>
             Submitted: <strong>%{ticket.create_date}</strong>
-        </p>
-        <p>
-            A representative will follow-up with you as soon as possible. You
-            can <a href="%{ticket.client_link}">view this ticket's progress
-            online</a>.
-        </p>
-        <p>
+            <br>
+            <br>
+            A representative will follow-up with you as soon as possible.
+            You can <a href="%{ticket.client_link}">view this ticket's
+            progress online</a>.
+            <br>
+            <br>
             Your Company Name Team,<br>
             %{signature}
-        </p>
         </td>
         <td style="vertical-align: top; padding-top: 12pt;">
-        <p>
             <span style="color: rgb(127, 127, 127); ">Company Name<br/>
             %{signature}</span>
-        </p>
-        <p>
-            <span style="color: rgb(127, 127, 127); ">
-            If you wish to send additional comments or information regarding
-            this issue, please don't open a new ticket. Simply</span> <a
-            href="%{ticket.client_link}"><span style="color: rgb(84, 141, 212); "
-            >login</span></a> <span
-            style="color: rgb(127, 127, 127); ">and update the ticket.</span>
-        </p>
-        <p>
+            <br>
+            <br>
+            <span style="color: rgb(127, 127, 127); "> If you wish to send
+            additional comments or information regarding this issue, please
+            don't open a new ticket. Simply</span> <a
+            href="%{ticket.client_link}"><span style="color: rgb(84, 141, 212);"
+            >login</span></a> <span style="color: rgb(127, 127, 127);"
+            >and update the ticket.</span>
+            <br>
+            <br>
             <span style="color: rgb(127, 127, 127); ">Visit our</span> <a
             href="%{url}/kb"><span style="color: rgb(84, 141, 212);
             ">knowledgebase</span></a>
-        </p>
         </td>
     </tr>
     </tbody>
     </table>
-    <p style="text-align: center;">
-        <img src="cid:b56944cb4722cc5cda9d1e23a3ea7fbc" width="126"
-        height="19" style="width: 126px; " alt="Powered by osTicket">
-    </p>
+    <div style="text-align: center;">
+        <a href="http://osticket.com/"><img
+        src="cid:b56944cb4722cc5cda9d1e23a3ea7fbc" width="126" height="19"
+        style="width: 126px; " alt="Powered by osTicket"></a>
+    </div>
