--- a/include/i18n/en_US/templates/email/ticket.notice.yaml
+++ b/include/i18n/en_US/templates/email/ticket.notice.yaml
@@ -12,49 +12,46 @@ notes: |
 subject: |
     %{ticket.subject}
 body: |
-    <p>
-         <span style="color: rgb(127, 127, 127); font-family: Georgia;
-         font-size: 28pt; font-weight: normal;">We're Here For
-         You</span><img src="cid:6fe1efdea357534d238b86e7860a7c5a"
-         width="96" alt="osTicket Logo (kangaroo)" height="54" style="width: 96px;
-         float: right; margin: 0px 0px 10px 10px;">
-    </p>
-    <p>
-         <strong>Dear %{ticket.name},</strong>
-    </p>
-    <p>
-         Our customer care team has created a ticket, <a
-         href="%{ticket.client_link}">#%{ticket.number}</a> on your behalf,
-         with the following details and summary:
-    </p>
-    <p>
-         Topic: <strong>%{ticket.topic.name}</strong>
-    </p>
-    <p>
-         Subject: <strong>%{ticket.subject}</strong>
-    </p>
-    <p>
-         %{message}
-    </p>
-    <p>
-         If need be, representative will follow-up with you as soon as
-         possible. You can also <a href="%{ticket.client_link}">view this
-         ticket's progress online</a>.
-    </p>
-    <p>
-         Your Company Name Team,<br>
-         %{signature}
-    </p>
+    <span style="color: rgb(127, 127, 127); font-family: Georgia;
+    font-size: 28pt; font-weight: normal;">We're Here For
+    You</span><img src="cid:6fe1efdea357534d238b86e7860a7c5a"
+    width="96" alt="osTicket Logo (kangaroo)" height="54" style="width: 96px;
+    float: right; margin: 0px 0px 10px 10px;">
+    <br>
+    <br>
+    <strong>Dear %{ticket.name.first},</strong>
+    <br>
+    <br>
+    Our customer care team has created a ticket, <a
+    href="%{ticket.client_link}">#%{ticket.number}</a> on your behalf, with
+    the following details and summary:
+    <br>
+    <br>
+    Topic: <strong>%{ticket.topic.name}</strong>
+    <br>
+    Subject: <strong>%{ticket.subject}</strong>
+    <br>
+    <br>
+    %{message}
+    <br>
+    <br>
+    If need be, a representative will follow-up with you as soon as
+    possible. You can also <a href="%{ticket.client_link}">view this
+    ticket's progress online</a>.
+    <br>
+    <br>
+    <div style="color: rgb(127, 127, 127);">
+    Your Company Name Team,<br>
+    %{signature}</div>
     <hr>
-    <p>
-        <span style="color: rgb(127, 127, 127);">If you wish to provide
-        additional comments or information regarding the issue, please do
-        not send another email. Instead, reply to this email or <a
-        href="%{ticket.client_link}"><span style="color: rgb(84, 141, 212);"
-        >login to your account</span></a> for a complete archive of all your
-        support requests and responses.</span>
-    </p>
-    <p style="text-align: center;">
+    <div style="color: rgb(127, 127, 127); font-size: small; "><em>If you
+    wish to provide additional comments or information regarding the issue,
+    please do not send another email. Instead, reply to this email or <a
+    href="%{ticket.client_link}"><span style="color: rgb(84, 141, 212);"
+    >login to your account</span></a> for a complete archive of all your
+    support requests and responses.</em></div>
+    <br>
+    <div style="text-align: center;">
         <img src="cid:b56944cb4722cc5cda9d1e23a3ea7fbc" width="126"
         alt="Powered by osTicket" height="19" style="width: 126px;">
-    </p>
+    </div>
