Add company information form
And extend the information to email templates

--- a/include/i18n/en_US/templates/email/ticket.autoreply.yaml
+++ b/include/i18n/en_US/templates/email/ticket.autoreply.yaml
@@ -37,7 +37,7 @@ body: |
     %{response}
     <br>
     <br>
-    <div style="color: rgb(127, 127, 127);">Your Company Name Team,<br>
+    <div style="color: rgb(127, 127, 127);">Your %{company.name} Team,<br>
     %{signature}</div>
     <hr>
     <div style="color: rgb(127, 127, 127); font-size: small; text-align:
