--- a/include/i18n/en_US/form.yaml
+++ b/include/i18n/en_US/form.yaml
@@ -103,3 +103,45 @@
       private: true
       edit_mask: 3
       sort: 3
+
+- type: C # notrans
+  title: Company Information
+  instructions: Details available in email templates
+  deletable: false
+  fields:
+    - type: text # notrans
+      name: name # notrans
+      label: Company Name
+      required: true
+      sort: 1
+      edit_mask: 3
+      configuration:
+        size: 40
+        length: 64
+
+    - type: text # notrans
+      name: website # notrans
+      label: Website
+      sort: 2
+      configuration:
+        size: 40
+        length: 64
+
+    - type: phone # notrans
+      name: phone # notrans
+      label: Phone Number
+      required: false
+      sort: 3
+      configuration:
+        ext: false
+
+    - type: memo # notrans
+      name: address
+      label: Address
+      required: false
+      sort: 4
+      configuration:
+        rows: 2
+        cols: 40
+        html: false
+
