--- a/include/i18n/en_US/templates/email/message.autoresp.yaml
+++ b/include/i18n/en_US/templates/email/message.autoresp.yaml
@@ -20,7 +20,7 @@ body: |
     <br>
     <br>
     <div style="color: rgb(127, 127, 127); ">
-    Your Company Name Team,<br>
+    Your %{company.name} Team,<br>
     %{signature}
     </div>
     <hr>
