--- a/include/i18n/en_US/templates/email/ticket.notice.yaml
+++ b/include/i18n/en_US/templates/email/ticket.notice.yaml
@@ -41,7 +41,7 @@ body: |
     <br>
     <br>
     <div style="color: rgb(127, 127, 127);">
-    Your Company Name Team,<br>
+    Your %{company.name} Team,<br>
     %{signature}</div>
     <hr>
     <div style="color: rgb(127, 127, 127); font-size: small; "><em>If you
