--- a/include/i18n/en_US/config.yaml
+++ b/include/i18n/en_US/config.yaml
@@ -4,8 +4,7 @@
 #
 ---
 core:
-    allowed_filetypes: '.doc, .pdf'
-    time_format: ' h:i A'
+    time_format: 'h:i A'
     date_format: 'm/d/Y'
     datetime_format: 'm/d/Y g:i a'
     daydatetime_format: 'D, M j Y g:ia'
@@ -14,3 +13,76 @@ core:
     enable_daylight_saving: 0
 
     reply_separator: '-- do not edit --'
+
+    # Do not translate below here
+    allowed_filetypes: '.doc, .pdf, .jpg, .jpeg, .gif, .png, .xls, .docx, .xlsx, .txt'
+    isonline: 1
+    staff_ip_binding: 0
+    staff_max_logins: 4
+    staff_login_timeout: 2
+    staff_session_timeout: 30
+    passwd_reset_period: 0
+    client_max_logins: 4
+    client_login_timeout: 2
+    client_session_timeout: 30
+    max_page_size: 25
+    max_open_tickets: 0
+    max_file_size: 1048576
+    max_user_file_uploads: 1
+    max_staff_file_uploads: 1
+    autolock_minutes: 3
+    alert_email_id: 0
+    default_email_id: 0
+    default_dept_id: 0
+    default_sla_id: 0
+    default_priority_id: 2
+    default_template_id: 1
+    default_smtp_id: 0
+    use_email_priority: 0
+    enable_kb: 0
+    enable_premade: 1
+    enable_captcha: 0
+    enable_auto_cron: 0
+    enable_mail_polling: 0
+    send_sys_errors: 1
+    send_sql_errors: 1
+    send_login_errors: 1
+    save_email_headers: 1
+    strip_quoted_reply: 1
+    ticket_autoresponder: 0
+    message_autoresponder: 0
+    ticket_notice_active: 1
+    ticket_alert_active: 1
+    ticket_alert_admin: 1
+    ticket_alert_dept_manager: 1
+    ticket_alert_dept_members: 0
+    message_alert_active: 1
+    message_alert_laststaff: 1
+    message_alert_assigned: 1
+    message_alert_dept_manager: 0
+    note_alert_active: 0
+    note_alert_laststaff: 1
+    note_alert_assigned: 1
+    note_alert_dept_manager: 0
+    transfer_alert_active: 0
+    transfer_alert_assigned: 0
+    transfer_alert_dept_manager: 1
+    transfer_alert_dept_members: 0
+    overdue_alert_active: 1
+    overdue_alert_assigned: 1
+    overdue_alert_dept_manager: 1
+    overdue_alert_dept_members: 0
+    assigned_alert_active: 1
+    assigned_alert_staff: 1
+    assigned_alert_team_lead: 0
+    assigned_alert_team_members: 0
+    auto_assign_reopened_tickets: 1
+    show_related_tickets: 1
+    show_assigned_tickets: 1
+    show_answered_tickets: 0
+    hide_staff_name: 0
+    overlimit_notice_active: 0
+    email_attachments: 1
+    random_ticket_ids: 1
+    log_level: 2
+    log_graceperiod: 12
