install: Fixup template install on MySQL clusters

--- a/include/i18n/en_US/email_template_group.yaml
+++ b/include/i18n/en_US/email_template_group.yaml
@@ -13,7 +13,8 @@
 # notes - Administrative notes (viewable internally only)
 #
 ---
-- isactive: 1
+- id: 1
+  isactive: 1
   name: osTicket Default Template (HTML)
   notes: |
     Default osTicket templates
