--- a/include/i18n/en_US/config.yaml
+++ b/include/i18n/en_US/config.yaml
@@ -71,7 +71,7 @@ core:
     assigned_alert_staff: 1
     assigned_alert_team_lead: 0
     assigned_alert_team_members: 0
-    auto_assign_reopened_tickets: 1
+    auto_claim_tickets: 1
     show_related_tickets: 1
     show_assigned_tickets: 1
     show_answered_tickets: 0
