--- a/include/i18n/en_US/templates/email/ticket.autoreply.yaml
+++ b/include/i18n/en_US/templates/email/ticket.autoreply.yaml
@@ -21,11 +21,11 @@ body: |
     float: right; margin: 0px 0px 10px 10px;">
     <br>
     <br>
-    <strong>Dear %{ticket.name.first},</strong>
+    <strong>Dear %{recipient.name.first},</strong>
     <br>
     <br>
     A request for support has been created and assigned ticket <a
-    href="%{ticket.client_link}">#%{ticket.number}</a> with the following
+    href="%{recipient.ticket_link}">#%{ticket.number}</a> with the following
     automatic reply
     <br>
     <br>
@@ -43,7 +43,7 @@ body: |
     <div style="color: rgb(127, 127, 127); font-size: small; text-align:
     center;"><em>We hope this response has sufficiently answered your questions.
     If not, please do not send another email. Instead, reply to this email
-    or <a href="%{ticket.client_link}"><span style="color: rgb(84, 141,
+    or <a href="%{recipient.ticket_link}"><span style="color: rgb(84, 141,
     212);" >login to your account</span></a> for a complete archive of all
     your support requests and responses.</em></div>
     <div style="text-align: center;">
