--- a/include/i18n/en_US/templates/email/ticket.autoresp.yaml
+++ b/include/i18n/en_US/templates/email/ticket.autoresp.yaml
@@ -25,7 +25,7 @@ body: |
     </tr>
     <tr>
         <td style="width:67%; padding-top: 12pt; padding-right: 12pt">
-            Dear %{ticket.name.first},
+            Dear %{recipient.name.first},
             <br>
             <br>
             We received your request and assigned ticket #%{ticket.number}
@@ -39,7 +39,7 @@ body: |
             <br>
             <br>
             A representative will follow-up with you as soon as possible.
-            You can <a href="%{ticket.client_link}">view this ticket's
+            You can <a href="%{recipient.ticket_link}">view this ticket's
             progress online</a>.
             <br>
             <br>
@@ -54,7 +54,7 @@ body: |
             <span style="color: rgb(127, 127, 127); "> If you wish to send
             additional comments or information regarding this issue, please
             don't open a new ticket. Simply</span> <a
-            href="%{ticket.client_link}"><span style="color: rgb(84, 141, 212);"
+            href="%{recipient.ticket_link}"><span style="color: rgb(84, 141, 212);"
             >login</span></a> <span style="color: rgb(127, 127, 127);"
             >and update the ticket.</span>
             <br>
