--- a/include/i18n/en_US/templates/email/ticket.reply.yaml
+++ b/include/i18n/en_US/templates/email/ticket.reply.yaml
@@ -15,7 +15,7 @@ body: |
     width="113" height="64" style="float: right; width: 113px; margin: 0px 0px 10px 10px;">
     <h3><span style="color: rgb(127, 127, 127); font-weight: normal;
     font-family: Georgia; font-size: 30pt">We're Here For You</span></h3>
-    <strong>Dear %{ticket.name},</strong>
+    <strong>Dear %%{recipient.name},</strong>
     <br>
     <br>
     %{response}
@@ -29,7 +29,7 @@ body: |
     <div style="color: rgb(127, 127, 127); font-size: small; text-align: center;"
     ><em>We hope this response has sufficiently answered your questions. If
     not, please do not send another email. Instead, reply to this email or
-    <a href="%{ticket.client_link}" style="color: rgb(84, 141, 212);" >login
+    <a href="%{recipient.ticket_link}" style="color: rgb(84, 141, 212);" >login
     to your account</a> for a complete archive of all your support requests
     and responses.</em></div>
     <div style="text-align: center;">
