--- a/include/i18n/en_US/templates/email/ticket.activity.notice.yaml
+++ b/include/i18n/en_US/templates/email/ticket.activity.notice.yaml
@@ -9,14 +9,7 @@ notes: |
 
 subject: "Re: %{ticket.subject}"
 body: |
-    <img src="cid:6fe1efdea357534d238b86e7860a7c5a" alt="osTicket Logo (kangaroo)" width="113" height="64"
-    style="float: right; width: 113px; margin: 0px 0px 10px 10px;">
-    <h3><span style="color: rgb(127, 127, 127); font-weight: normal; font-family: Georgia; font-size: 30pt"
-    >Stay in the loop</span></h3> <strong><br>
-    Dear %{recipient.name.first},
-    </strong>
-    <br>
-    <br>
+    <h3><strong>Dear %{recipient.name.first},</strong></h3>
     <div>
         <em>%{poster.name}</em> just logged a message to a ticket in which you participate.
     </div>
@@ -32,6 +25,3 @@ body: |
     or <a href="%{recipient.ticket_link}" style="color: rgb(84, 141, 212);"
     >click here</a> for a complete archive of the ticket thread.</em>
     </div>
-    <div style="text-align: center;"> <a href="http://osticket.com/"><img
-    src="cid:b56944cb4722cc5cda9d1e23a3ea7fbc" alt="Powered by osTicket"
-    width="126" height="19" style="width: 126px;"></a> </div>
