Put the ticket number back in the subject line

--- a/include/i18n/en_US/templates/email/ticket.activity.notice.yaml
+++ b/include/i18n/en_US/templates/email/ticket.activity.notice.yaml
@@ -7,7 +7,8 @@
 notes: |
     Notice sent to collaborators on ticket activity e.g reply or message.
 
-subject: "Re: %{ticket.subject}"
+subject: |
+    Re: %{ticket.subject} [#%{ticket.number}]
 body: |
     <h3><strong>Dear %{recipient.name.first},</strong></h3>
     <div>
