--- a/include/i18n/en_US/help/tips/settings.autoresponder.yaml
+++ b/include/i18n/en_US/help/tips/settings.autoresponder.yaml
@@ -1,5 +1,5 @@
 #
-# This is popup help messages for the Admin Panel -> Settings -> System page
+# This is popup help messages for the Admin Panel -> Settings -> Autoresponder
 #
 # Fields:
 # title - Shown in bold at the top of the popover window
@@ -14,48 +14,47 @@
 #
 ---
 new_ticket:
-    title: New Ticket Auto-Response
+    title: New Ticket
     content: >
-        Autoresponse includes the ticket ID required to check status of the
-        ticket
+        Enable this if you want a confirmation message  sent to the Client
+        that the Help Desk has received their new ticket. The message sent to
+        the Client is customizable.
     links:
       - title: Default New Ticket Autoresponse Template
         href: /scp/templates.php?default_for=ticket.autoresp
-
-new_staff_ticket:
-    title: New Ticket by Staff Auto-Response
+        
+new_ticket_by_staff:
+    title: New Ticket by Staff
     content: >
-        Notice sent when staff creates a ticket on behalf of the user.
-        <em>Staff can override this when creating new tickets</em>
+        Notice sent when staff creates a ticket on behalf of the user. <em>Staff
+        can override this when creating new tickets.</em>
     links:
       - title: Default New Ticket by Staff Autoresponse Template
         href: /scp/templates.php?default_for=ticket.notice
-
-new_message:
-    title: New Message Confirmation
+        
+new_message_for_submitter:
+    title: New Message for Submitter
     content: >
-        Send a confirmation receipt to the message submitter when a new
-        message is appended to an existing ticket.
+        Confirmation notice sent when a new message is appended to an existing
+        ticket.
     links:
       - title: Default New Message Confirmation Template
         href: /scp/templates.php?default_for=message.autoresp
-
-collaborators:
-    title: New Activity Notice
+        
+new_message_for_participants:
+    title: New Message for Participants
     content: >
         Broadcast messages received from message submitter to all other
         participants on the ticket.
-
+        
 overlimit_notice:
     title: Overlimit Notice
     content: >
-        Send ticket denied notice to <offending> user when the <em>maximum
-        open tickets</em> limit is reached. Admin gets alerts on
-        <em>ALL</em> denials by default
+        Send ticket denied notice sent to user on limit violation. Admin gets
+        alerts on <em>all</em> denials by default.
     links:
       - title: Default Overlimit Notice Template
         href: /scp/templates.php?default_for=ticket.overlimit
 
       - title: Set <em>Maximum Open Tickets</em>
         href: /scp/settings?t=tickets
-
